exports[`datapoints - 1. Constants should return constants 1`] = `
Object {
  "APPEND_DATAPOINT": "mcs-lite-mobile-web/datapoints/APPEND_DATAPOINT",
  "CLEAR": "mcs-lite-mobile-web/datapoints/CLEAR",
  "FETCH_DATAPOINTS": "mcs-lite-mobile-web/datapoints/FETCH_DATAPOINTS",
  "SET_DATAPOINTS": "mcs-lite-mobile-web/datapoints/SET_DATAPOINTS",
}
`;

exports[`datapoints - 2. Action Creators should return appendDatapoint actions 1`] = `
Object {
  "payload": Object {
    "dataChannelId": "id",
    "values": Object {
      "value": 1,
    },
  },
  "type": "mcs-lite-mobile-web/datapoints/APPEND_DATAPOINT",
}
`;

exports[`datapoints - 2. Action Creators should return clear actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/datapoints/CLEAR",
}
`;

exports[`datapoints - 2. Action Creators should return fetchDatapoints actions 1`] = `
Object {
  "payload": Object {
    "dataChannelId": "dataChannelId",
    "deviceId": "deviceId",
  },
  "type": "mcs-lite-mobile-web/datapoints/FETCH_DATAPOINTS",
}
`;

exports[`datapoints - 2. Action Creators should return setDatapoints actions 1`] = `
Object {
  "payload": Array [],
  "type": "mcs-lite-mobile-web/datapoints/SET_DATAPOINTS",
}
`;

exports[`datapoints - 4. Reducer should handle APPEND_DATAPOINT 1`] = `
Object {
  "dataChannelId4124": Array [
    Object {
      "updatedAt": 1488938740201,
      "values": Object {
        "value": 1,
      },
    },
    Object {
      "updatedAt": 1488938740202,
      "values": Object {
        "value": 5,
      },
    },
  ],
}
`;

exports[`datapoints - 4. Reducer should handle SET_DATAPOINTS 1`] = `
Object {
  "datachannelId123": Array [
    Object {
      "datachannelId": "datachannelId123",
      "others": Object {},
    },
  ],
}
`;

exports[`datapoints - 4. Reducer should return the initial state 1`] = `Object {}`;
